force-app/main/default/objects/Skill__c/Skill__c.object-meta.xml
<CustomObject>
    <description>Skills are tracked in this object.</description>
    <label>Skill</label>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>