force-app/main/default/objects/Skill__c/fields/L_TC_Criteria_to_demonstrate_Competence__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Criteria_to_demonstrate_Competence__c</fullName>
    <label>Assessment Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>