force-app/main/default/objects/Skill__c/fields/L_TC_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Date_Added__c</fullName>
    <description>When the skill was added.</description>
    <label>Date Listed as Current</label>
    <type>Date</type>
</CustomField>