force-app/main/default/objects/Skill__c/fields/L_TC_Date_Retired__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Date_Retired__c</fullName>
    <description>Date when the skill was retired.</description>
    <label>Date Retired</label>
    <type>Date</type>
</CustomField>