force-app/main/default/objects/Skill__c/fields/L_TC_Skill_Description__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Skill_Description__c</fullName>
    <description>Long Description about the procedure.</description>
    <label>Skill Description</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>