force-app/main/default/objects/Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Skill_Description__c</columns>
    <columns>L_TC_Date_Added__c</columns>
    <columns>L_TC_Date_Retired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>