force-app/main/default/objects/Skill__c/listViews/Expired_Skills.listView-meta.xml
<ListView>
    <fullName>Expired_Skills</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Skill_Description__c</columns>
    <columns>L_TC_Date_Added__c</columns>
    <columns>L_TC_Date_Retired__c</columns>
    <columns>L_TC_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_TC_Date_Retired__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>L_TC_Date_Retired__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Expired Skills</label>
</ListView>